NEON-1559 Messages for date-selected events now contain both a start and an end date; the Timeline and Line Chart highlight the whole date range from the event message instead of a single day.  This change fixes multiple bugs with the highlighting behavior if the Timeline and Line Chart had different date granularities.  Also changed the highlight color from gold to yellow to improve readability.

--- a/app/css/directives/linechart.less
+++ b/app/css/directives/linechart.less
@@ -52,7 +52,7 @@
     }
 
     .highlight {
-        fill: yellow;
+        fill: gold;
     }
 
     .y {
