--- a/app/css/directives/timelineSelector.less
+++ b/app/css/directives/timelineSelector.less
@@ -80,7 +80,7 @@
     }
 
     .highlight {
-        fill: yellow;
+        fill: gold;
     }
 }
 
